// -*- mode: protobuf; indent-tabs-mode: t; c-basic-offset: 8; tab-width: 8 -*-
syntax = "proto3";

package chef.automate.domain.secrets;
option go_package = "github.com/chef/automate/api/config/secrets";

import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
	option (chef.automate.api.service_config) = {name: "secrets-service"};

	V1 v1 = 3;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			Service service = 2;
			chef.automate.infra.config.TLSCredentials tls = 3;
			google.protobuf.StringValue secrets_key = 4;
			Storage storage = 5;
			Log log = 6;

			message Service {
				google.protobuf.StringValue host = 1 [deprecated=true]; // The listen host is no longer setable(localhost only)
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "service", default: 10131, protocol: "grpc" } ];
				reserved 3;
			}

			message Log {
				google.protobuf.StringValue format = 1;
				google.protobuf.StringValue level = 2;
			}

			message Storage {
				google.protobuf.StringValue database = 1;
				google.protobuf.StringValue user = 2;
			}
		}

		message Service {
		}
	}
}
